Updated font to Montserrat
Signed-off-by: Blueteafrog <blueteafrog@fastmail.com>

--- a/mocha.css
+++ b/mocha.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 :root {
   --ls-page-text-size: 1em;
   --ls-page-title-size: 40px;
   /* --ls-main-content-max-width: 940px; */
-  --ls-font-family: Roboto;
+  --ls-font-family: Montserrat;
 
   --radius-sm: 2px;
   --radius-md: 3px;
