--- a/mocha.css
+++ b/mocha.css
@@ -683,7 +683,8 @@ blockquote, pre.pre-wrap-white-space {
 .admonitionblock .is-paragraph {
 	font-size: 16px;
 }
-.pre-wrap-white-space {
+
+pre.pre-wrap-white-space {
 	border: 1px solid var(--ls-border-color);
 }
 
