Update warning admonition background color.
Signed-off-by: Blueteafrog <blueteafrog@fastmail.com>

--- a/mocha.css
+++ b/mocha.css
@@ -650,7 +650,7 @@ blockquote {
 	--bq-txt-bd: 163, 215, 173;
 	--verse-bg: #eaf6f6;
 	--verse-txt-bd: 183, 225, 227;
-	--warn-bg: #fffbf0;
+	--warn-bg: #fff8e6;
 	--warn-txt-bd: 254, 230, 168;
 	--important-bg: #fcefef;
 	--important-txt-bd: 242, 159, 151;
