--- a/mocha.css
+++ b/mocha.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"); /*@import for "Montserrat" Font If you would like to use it, change `--ls-font-family: Inter` to `--ls-font-family: Montserrat` */
 
 :root {
-  --ls-page-text-size: 1em;
-  --ls-page-title-size: 40px;
-  /* --ls-main-content-max-width: 940px; */
-  --ls-font-family: Montserrat;
+	--ls-page-text-size: 1em;
+	--ls-page-title-size: 40px;
+	--ls-main-content-max-width: 940px;
+	--ls-font-family: Inter;
 
   --radius-sm: 2px;
   --radius-md: 3px;
@@ -701,7 +701,7 @@ blockquote::before {
   font-weight: normal;
   line-height: 0.1em;
   margin-right: 1px;
-  vertical-align: -0.3em;
+  vertical-align: -0.25em;
 }
 
 html[data-theme="light"] blockquote {
@@ -907,6 +907,7 @@ hr {
 .ui__button {
   background-color: var(--ui-button-bg);
   color: var(--ui-button-color);
+  border-radius: var(--radius-md);
 }
 .ui__button.active,
 .ui__button:hover {
@@ -974,6 +975,11 @@ input {
   border-radius: 0;
   font-size: inherit;
   padding: 0 4px;
+	display: inline;
+}
+
+.block-ref > div div{
+	display: inline;
 }
 
 .block-ref:hover {
